--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "handlebars": "^4.7.8",
     "@fastify/formbody": "^7.4.0",
     "@fastify/static": "^6.10.2",
-    "@fastify/view": "^8.0.0"
+    "@fastify/view": "^8.0.0",
+    "socket.io": "^4.8.1",
+    "express": "^4.21.2",
+    "uuid": "8.x",
+    "axios": "^1.8.3"
   },
   "engines": {
     "node": "14.x"
