--- a/package.json
+++ b/package.json
@@ -7,15 +7,13 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "fastify": "^4.21.0",
-    "handlebars": "^4.7.8",
-    "@fastify/formbody": "^7.4.0",
-    "@fastify/static": "^6.10.2",
-    "@fastify/view": "^8.0.0",
     "socket.io": "^4.8.1",
     "express": "^4.21.2",
     "uuid": "8.x",
-    "axios": "^1.8.3"
+    "axios": "^1.8.3",
+    "body-parser": "^2.1.0",
+    "ejs": "^3.1.10",
+    "cors": "^2.8.5"
   },
   "engines": {
     "node": "14.x"
