--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "axios": "^1.8.3",
     "body-parser": "^2.1.0",
     "ejs": "^3.1.10",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "jsonwebtoken": "^9.0.2"
   },
   "engines": {
     "node": "14.x"
