--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "body-parser": "^2.1.0",
     "ejs": "^3.1.10",
     "cors": "^2.8.5",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "firebase": "^11.4.0"
   },
   "engines": {
     "node": "14.x"
