--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "cors": "^2.8.5",
     "jsonwebtoken": "^9.0.2",
     "firebase": "^11.4.0",
-    "peerjs": "^1.5.3"
+    "peerjs": "^1.5.3",
+    "peer": "^1.0.2"
   },
   "engines": {
     "node": "14.x"
