--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "jsonwebtoken": "^9.0.2",
     "firebase": "^11.4.0",
     "peerjs": "^1.5.3",
-    "peer": "^1.0.2"
+    "peer": "^1.0.2",
+    "peer-server": "^1.1.2"
   },
   "engines": {
     "node": "14.x"
