--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "peer-server": "^1.1.2",
     "peerjs": "^1.5.3",
     "socket.io": "^4.8.1",
-    "uuid": "8.x"
+    "uuid": "8.x",
+    "helmet": "^8.1.0"
   },
   "engines": {
     "node": "14.x"
