💳🖼 Checkpoint ./package.json:37906304/264 ./server.js:37906304/7964 ./public/js/streamer.js:37906304/352 ./views/streamer.ejs:37906304/14

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "postinstall": "mkdir -p public/js/libs && cp node_modules/rasterizehtml/build/rasterizeHTML.all.js public/js/libs/"
+    "postinstall": "mkdir -p public/js/libs && cp node_modules/rasterizehtml/dist/rasterizeHTML.allinone.js public/js/libs/rasterizeHTML.all.js"
   },
   "dependencies": {
     "axios": "^1.8.3",
