Add cors dependency to package.json

--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "peer-server": "^1.1.2",
     "peerjs": "^1.5.3",
     "socket.io": "^4.8.1",
-    "uuid": "8.x"
+    "uuid": "8.x",
+    "cors": "^2.8.5"
   },
   "engines": {
     "node": "16.x"
